feat: api get latest balance
